     -- Make a jobserver connection use the command timeout during exception negotiation.

     -- Make $taskset->add_task use the command timeout to not hang during job submission.

     -- Add a client option 'command_timeout' to indicate how long we should wait before considering a
        gearman command to have failed. This not the same as a job timeout, and only affects commands
        that should generally not block apart from the roundtrip on the network.

     -- When a connection to a gearman server fails, start counting how many failures we've had and
        do an exponential backoff (1s, 4s, 9s, 16s...) to a maximum of 90 seconds (default) that we
        treat the server as 'gone' quickly.

     -- Change dispatch_background to share code paths with other dispatching, this will make
        background jobs now be hashed to a particular server (rather than handed to a random server)

1.11 (2010-01-17)

     -- Switch read_res_packet to use sysread with a large buffer and offsets. This improves
        memory usage (sometimes drastically) and performance.

     -- Fix from Martin Atkins, don't print() in the Gearman::Util code and close sockets
        when you have an error of some kind (indicating we're out of sync)

1.10 (2009-10-04)

     -- Make workers wake up periodically for a particular server to make sure they aren't
        stale connections. This happened naturally (although at relatively low interval) in
        previous releases.

     -- Help prevent leaks when Gearman::Task->add_hook is used.

     -- Change worker to only 'wake up' against a gearmand that has woken it up, this prevents
        a constant flood of pre-sleep command from arriving at an otherwise silent gearmand.

     -- Fix issue where prefixes were double-prepended on function names on worker
        upon reconnect.

     -- Fix issue where the other response parser code in Util would silently truncate
        argument strings longer than 20*the socket buffer size.
